[metadata]
name = halon-api
version = 0.0.6
description = A wrapper for the REST API of mail transfer agent (MTA) Halon
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/tobiasbp/halon-api
author = Tobias Balle-Petersen
author_email = tobiasbp@gmail.com
license_file = LICENSE

classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Topic :: Communications :: Email :: Mail Transport Agents
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6.1
install_requires = requests
